--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,14 @@
 {
-    "name": "spanjeta/yii2-backup",
+    "name": "fgh151/yii2-backup",
     "description": "Database Backup and Restore functionality",
     "type": "yii2-extension",
     "keywords": ["yii2","Database", "Backup","Restore"],
     "license": "Apache-2.0",
     "authors": [
+        {
+            "name": "Fedor B Gorsky",
+            "email": "fedor@support-pc.org"
+        },
         {
             "name": "Shiv Charan Panjeta",
             "email": "shivcharan.panjeta@gmail.com"
@@ -15,7 +19,7 @@
     },
     "autoload": {
         "psr-4": {
-            "spanjeta\\modules\\backup\\": ""
+            "fgh151\\modules\\backup\\": ""
         }
     }
 }
